немного познал props. еще подстилизовал post'ы

--- a/src/components/ProfilePage/MyPosts/MyPosts.module.css
+++ b/src/components/ProfilePage/MyPosts/MyPosts.module.css
@@ -3,6 +3,8 @@
     max-width: 380px;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .subscribe__input {
