--- a/src/components/ProfilePage/ProfilePage.module.css
+++ b/src/components/ProfilePage/ProfilePage.module.css
@@ -1,7 +1,7 @@
 .app__content{
     padding: 10px 10px;
     grid-area:c;
-    background-color:gray;
+    background-color:#edeef0;
   }
   
   .app__content img{
