--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,6 +4,8 @@
     display:flex;
     align-items: center;
     justify-content: center;
+    border:2px solid white;
+    border-radius: 5px;
   }
 
   .header__text{
