--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,28 +1,43 @@
 .page__navbar{
   grid-area:n;
-  background-color:green;
+  background-color:#edeef0;
   margin: 0;
+  border-radius: 5px;
 }
 
 .navbar__item:first-child{
-  margin-top: 30px;
+  margin-top: 20px;
+}
+
+.navbar__item:last-child{
+  margin-top: 20px;
 }
 
 .navbar__item{
-  color:white;
+  color:Black;
   display:flex;
   flex-direction: inherit;
   justify-content: center;
 }
 
-.navbar__item.active{
-  color:blue;
-  font-weight: 700;
+/* Закомментил, потому что ушли в навигации от ссылок к NavLink to */
+/* .navbar__item a {
+  color: inherit;
+  text-decoration: none;
+} */
+
+.navbar__string{
+  color: inherit;
+  text-decoration: none;
+}
+
+.navbar__string.activeNav{
+  font-weight: 500;
+/*   text-decoration: none; */
 }
 
 .navbar__item:hover{
-  color:green;
-  background-color: white;
+  background-color:#dce1e6;
   cursor: pointer;
   border-radius:5px;
 }
