--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -10,16 +10,12 @@
 .user__item{
   height: 30px;
   line-height: 30px;
-  border-top: 1px solid blue;
-  border-left: 1px solid blue;
-  border-right: 1px solid blue;
+  border: 1px solid blue;
   background-color: white;
   display: flex;
+  margin-top: 5px;
 }
 
-.user__item:last-child{
-  border-bottom: 1px solid blue;
-}
 
 .user__item:hover{
   background-color:#edeef0;
