--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -59,3 +59,68 @@
    white-space: nowrap;
    overflow: hidden;
  }
+
+ /* Начало добавляемого элемента */
+ .addMess {
+  width: 100%; 
+  max-width: auto;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.addMess__input {
+  border-radius: 3px;
+  width: 65%;
+  height: 12px;
+  padding: 12px;
+
+  background: #fff;
+  border: 1px solid #e7e7e7;
+  border-right: 0;
+
+  font-family: 'Montserrat', sans-serif;
+  font-size: 10px;
+  line-height: 1.1;
+  color: #333;
+  font-style: italic;
+  font-weight: 300;
+}
+
+.addMess__input::placeholder {
+  color: #ccc;
+}
+
+.addMess__input:focus {
+  outline: 0;
+  border-color: #507299;
+}
+
+.addMess__btn {
+  border-radius: 3px;
+  width: 15%;
+  height: auto;
+  padding: 12px 30px;
+
+  background-color:  #507299;
+  border: 0;
+  cursor: pointer;
+
+  font-family: 'Montserrat', sans-serif;
+  font-size: 10px;
+  line-height: 1.1;
+  font-weight: 400;
+  color:#fff;
+  text-transform: uppercase;
+
+  transition: background .2s linear;
+}
+
+.addMess__btn:hover {
+  background-color: #507299;
+}
+
+.addMess__btn:focus {
+  outline: 0;
+}
