--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .app__header{
     grid-area:h;
-    background-color: blue; 
+    background-color: #507299; 
     display:flex;
     align-items: center;
     justify-content: center;
