--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -16,17 +16,14 @@
 .navbar__item{
   color:Black;
   display:flex;
-  flex-direction: inherit;
-  justify-content: center;
+  margin-left: 10px;
+  min-height: 25px;
+  /* flex-direction: inherit;
+  justify-content: center; */
 }
 
-/* Закомментил, потому что ушли в навигации от ссылок к NavLink to */
-/* .navbar__item a {
-  color: inherit;
-  text-decoration: none;
-} */
-
 .navbar__string{
+  margin-left: 10px;
   color: inherit;
   text-decoration: none;
 }
