заверстал профиль пользователя. Со страницы друзей реализовал переход в их профили

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -18,6 +18,7 @@
   display:flex;
   margin-left: 10px;
   min-height: 25px;
+  min-width: 150px;
   /* flex-direction: inherit;
   justify-content: center; */
 }
