--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -13,3 +13,12 @@
     font-weight: 700;
     font-size: 16px;
   }
+
+  .login__block{
+    padding-left: 40px;
+    float:right;
+  }
+
+  .login__block a{
+    color: white;
+  }
