--- a/src/components/ProfilePage/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/ProfilePage/ProfileInfo/ProfileInfo.module.css
@@ -227,4 +227,14 @@
 .myPhotos__count:hover{
   text-decoration: underline;
 }
+
+/* Статус пользователя */
+.status__form{
+  border: black 2px solid;
+}
+
+.edit__text{
+  border: red 2px solid;
+  cursor: pointer;
+}
  
